self-hosted runner configured

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -111,7 +111,7 @@ jobs:
 
   deploy:
     needs: [train, test, build, push-image]
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
 
     env:
       IMG_NAME: titanic-api-img             # docker image name
